--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="album" data-jgallery-album-title="Hidd3nSquid#ED">
         
-
+	<a href="dist/images/large/7.png"><img src="dist/images/thumbs/7.png" alt="Photo 7" /></a>
 
 
     </div>
